--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ flask-cors==4.0.0
 python-dotenv==1.0.0
 requests==2.31.0
 yfinance==0.2.28
-anthropic==0.18.1
-openai==1.12.0
+anthropic>=0.34.0
+openai>=1.54.0
 gunicorn==21.2.0
 
