--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 # Netlify Configuration
 [build]
-  # Netlify will serve files from the frontend directory
+  # Base directory is root, publish directory is frontend
+  base = "."
   publish = "frontend"
   # No build command needed since we're using standalone HTML
 
